<resources>
    <string name="app_name">Phone Book</string>

    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>

    <string name="action_settings">Settings</string>
    <string name="about">About Author</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="phone_book">Phone Book</string>
    <string name="by_author">by Anton Komarovskyi</string>
    <string name="login_to_proceed">Your contacts book is empty.\nPlease, login to proceed.</string>
    <string name="phone_book_for_smart_users">Phone Book for Smart Users!</string>
    <string name="enjoy">Enjoy!</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="error_login">Incorrect username or password!</string>
    <string name="appsettings">app_settings</string>

    <string name="admin">admin</string>
    <string name="admin_password">123456</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="done">Done</string>
    <string name="contact">Contact</string>
    <string name="delete_or_edit">Delete or edit contact?</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="facebook">Facebook page</string>
    <string name="year">2016</string>
    <string name="author_email">anton.komarovskyi@gmail.com</string>

    <integer name="min_splash_time">500</integer>
    <integer name="default_contacts_number">10</integer>

</resources>
