<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary_light"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/about"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="20dp"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:id="@+id/ll_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/app"
                        style="@style/Base.TextAppearance.AppCompat.Headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/primary_text" />

                    <TextView
                        android:id="@+id/author"
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/by_author"
                        android:textColor="@color/primary_text" />

                    <TextView
                        android:id="@+id/author_email"
                        style="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/author_email"
                        android:textColor="@color/primary_text" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btnLinkedIn"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:clickable="true"
                        android:contentDescription="@string/about"
                        android:src="@drawable/linkedin" />

                    <ImageView
                        android:id="@+id/btnFacebook"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:clickable="true"
                        android:contentDescription="@string/about"
                        android:src="@drawable/facebook" />

                    <ImageView
                        android:id="@+id/btnGooglePlus"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:clickable="true"
                        android:contentDescription="@string/about"
                        android:src="@drawable/googleplus" />


                </LinearLayout>

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/year"
                    android:textColor="@color/primary_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

